--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Aggregate-micro-paths : Have a lot of geo-temporal points you want to analyze? Use Aggregate-Micropaths to turn data into knowledge." />
+    <meta name="description" content="Aggregate-micro-paths : Infer movement patterns from large amounts of geo-temporal data in a cloud environment." />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/Sotera/aggregate-micro-paths">View on GitHub</a>
 
           <h1 id="project_title">Aggregate-micro-paths</h1>
-          <h2 id="project_tagline">Have a lot of geo-temporal points you want to analyze? Use Aggregate-Micropaths to turn data into knowledge.</h2>
+          <h2 id="project_tagline">Infer movement patterns from large amounts of geo-temporal data in a cloud environment.</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/Sotera/aggregate-micro-paths/zipball/master">Download this project as a .zip file</a>
