Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h1>
 <a name="aggregate-micro-paths" class="anchor" href="#aggregate-micro-paths"><span class="octicon octicon-link"></span></a>Aggregate Micro Paths</h1>
 
-<p><img src="https://raw.github.com/Sotera/aggregate-micro-paths/master/docs/images/europe-1.png" align="right" width="600"></p>
+<p><img src="https://raw.github.com/Sotera/aggregate-micro-paths/master/docs/images/europe-1.png" align="center" width="600"></p>
 
 <p>Infer movement patterns from large amounts of geo-temporal data in a cloud environment.</p>
 
