--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Aggregate-micro-paths</title>
+    <title>Aggregate Micro Paths</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/Sotera/aggregate-micro-paths">View on GitHub</a>
 
-          <h1 id="project_title">Aggregate-micro-paths</h1>
+          <h1 id="project_title">Aggregate Micro Paths</h1>
           <h2 id="project_tagline">Analytic for Visualizing Geo-Temporal Features of Big Data</h2>
 
             <section id="downloads">
@@ -32,7 +32,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>
-<a name="aggregate-micro-paths" class="anchor" href="#aggregate-micro-paths"><span class="octicon octicon-link"></span></a>Aggregate Micro Paths</h1>
+<a name="aggregate-micro-paths" class="anchor" href="#aggregate-micro-paths"><span class="octicon octicon-link"></span></a></h1>
 
 <p><img src="https://raw.github.com/Sotera/aggregate-micro-paths/master/docs/images/europe-1.png" align="center" width="600"></p>
 
@@ -62,12 +62,9 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Aggregate-micro-paths maintained by <a href="https://github.com/Sotera">Sotera</a></p>
+        <p class="copyright">Aggregate Micro Paths maintained by <a href="https://github.com/Sotera">Sotera</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-
-    
-
   </body>
 </html>
